@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/jaraco-utils
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/jaraco-utils/ChangeLog,v 1.3 2014/06/12 06:48:11 patrick Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/jaraco-utils/ChangeLog,v 1.4 2015/03/06 22:25:40 pacho Exp $
+
+  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> jaraco-utils-10.0.2.ebuild:
+  amd64 stable, bug 540290
 
   12 Jun 2014; Patrick Lauer <patrick@gentoo.org> jaraco-utils-10.0.2.ebuild:
   Add py34
